PR #293 の 1.21.1 差分を調整